NH | fixing double scrollbar on Firefox

--- a/cr-network-stylesheet.css
+++ b/cr-network-stylesheet.css
@@ -2,6 +2,7 @@
 
 #MPOuterMost {
     overflow-x: hidden;
+    overflow-y: hidden;
 }
 
 /* hide .HtmlFooter and .MPBottomMenu, both of which add extra padding/whitespace */
@@ -396,7 +397,7 @@ a[id*="Welcome_Details_ProfileLink"] {
 .btn.btn-xs {
     padding: 2px 5px;
 }
-/****** CHANGE COLOURS ON THESE ******/
+
 .btn-default {
     background: #E3DDD6;
     color: #052B3E;
